cabal-version:      2.4
name:               doc-search
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable doc-search
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Index

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , aeson
                    , aeson-pretty
                    , base64
                    , bloodhound
                    , bytestring
                    , pureMD5
                    , http-client ^>=0.7.11
                    , github ^>=0.28
                    , text
                    , vector
    hs-source-dirs:   app, src
    default-language: Haskell2010
    default-extensions:  OverloadedStrings
